update all files

--- a/about-us.html
+++ b/about-us.html
@@ -3,79 +3,123 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-i18n-key="meta_title">เกี่ยวกับเรา | Baume Chemical</title>
-  <meta name="description" content="บริษัท โบเม่ เคมิเคิล จำกัด ผู้นำเข้าและจัดหาเคมีภัณฑ์งานชุบเคลือบผิวโลหะคุณภาพสูง มากกว่า 30 ปี พร้อมบริการวิเคราะห์และที่ปรึกษาหน้างาน" data-i18n-attr="content:meta_desc">
 
-  <!-- Canonical & Hreflang -->
-  <link rel="canonical" href="about-us.html">
-  <link rel="alternate" hreflang="th" href="about-us.html">
-  <link rel="alternate" hreflang="x-default" href="about-us.html">
+<!-- === SEO (About Us) === -->
+<title data-i18n-key="meta_title">เกี่ยวกับเรา | Baume Chemical</title>
+<meta name="description" content="บริษัท โบเม่ เคมิเคิล จำกัด ผู้นำเข้าและจัดหาเคมีภัณฑ์งานชุบเคลือบผิวโลหะคุณภาพสูง มากกว่า 30 ปี พร้อมบริการวิเคราะห์และที่ปรึกษาหน้างาน" data-i18n-attr="content:meta_desc">
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow, max-image-preview:large">
-  <meta name="theme-color" content="#2c5e4e">
+<!-- Canonical & Hreflang -->
+<link rel="canonical" href="https://www.baumechemical.com/about-us">
+<link rel="alternate" hreflang="th" href="https://www.baumechemical.com/about-us">
+<link rel="alternate" hreflang="x-default" href="https://www.baumechemical.com/about-us">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="th_TH" id="ogLocale">
-  <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:og_title" id="ogTitle">
-  <meta property="og:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 30 ปี" data-i18n-attr="content:og_desc" id="ogDesc">
-  <meta property="og:url" content="https://www.baumechemical.com/about-us">
-  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
-  <meta property="og:image:alt" content="ห้องแล็บทดสอบและงานบริการของ Baume Chemical" data-i18n-attr="content:og_img_alt">
+<!-- Robots & Theme -->
+<meta name="robots" content="index, follow, max-image-preview:large">
+<meta name="theme-color" content="#2c5e4e">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:tw_title" id="twTitle">
-  <meta name="twitter:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 30 ปี" data-i18n-attr="content:tw_desc" id="twDesc">
-  <meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Baume Chemical">
+<meta property="og:locale" content="th_TH" id="ogLocale">
+<meta property="og:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:og_title" id="ogTitle">
+<meta property="og:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 30 ปี" data-i18n-attr="content:og_desc" id="ogDesc">
+<meta property="og:url" content="https://www.baumechemical.com/about-us">
+<meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="ห้องแล็บทดสอบและงานบริการของ Baume Chemical" data-i18n-attr="content:og_img_alt">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="เกี่ยวกับเรา | Baume Chemical" data-i18n-attr="content:tw_title" id="twTitle">
+<meta name="twitter:description" content="ผู้เชี่ยวชาญโซลูชันเคมีงานชุบโลหะครบวงจร ประสบการณ์กว่า 30 ปี" data-i18n-attr="content:tw_desc" id="twDesc">
+<meta name="twitter:image" content="https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg">
+<meta name="twitter:image:alt" content="ห้องแล็บทดสอบและงานบริการของ Baume Chemical" data-i18n-attr="content:og_img_alt">
+
 
   <!-- Perf: Preconnect -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
 
-  <!-- JSON-LD: AboutPage -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"AboutPage",
-    "name":"เกี่ยวกับเรา | Baume Chemical",
-    "url":"https://www.baumechemical.com/about-us",
-    "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com"},
-    "primaryImageOfPage":"https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg",
-    "publisher":{
-      "@type":"Organization",
-      "name":"Baume Chemical",
-      "logo":{"@type":"ImageObject","url":"https://img2.pic.in.th/pic/Baume.jpg"}
+<!-- === JSON-LD: Organization + Breadcrumb + AboutPage (linked) === -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "@id": "https://www.baumechemical.com/#org",
+      "name": "Baume Chemical",
+      "legalName": "บริษัท โบเม่ เคมิเคิล จำกัด",
+      "url": "https://www.baumechemical.com/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://img2.pic.in.th/pic/Baume.jpg"
+      },
+      "telephone": "+66-92-546-9887",
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "telephone": "+66-92-546-9887",
+        "areaServed": "TH",
+        "availableLanguage": ["th","en"]
+      }],
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก, เขต ภาษีเจริญ",
+        "addressLocality": "กรุงเทพมหานคร",
+        "postalCode": "10160",
+        "addressCountry": "TH"
+      },
+      "foundingDate": "1987",
+      "sameAs": [
+        "https://line.me/ti/p/~baumechemical",
+        "https://www.baumechemical.com/"
+      ]
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.baumechemical.com/about-us#breadcrumb",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "หน้าแรก",
+          "item": "https://www.baumechemical.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "เกี่ยวกับเรา",
+          "item": "https://www.baumechemical.com/about-us"
+        }
+      ]
+    },
+    {
+      "@type": "AboutPage",
+      "@id": "https://www.baumechemical.com/about-us#about",
+      "url": "https://www.baumechemical.com/about-us",
+      "name": "เกี่ยวกับเรา | Baume Chemical",
+      "isPartOf": {
+        "@type": "WebSite",
+        "@id": "https://www.baumechemical.com/#website",
+        "name": "Baume Chemical",
+        "url": "https://www.baumechemical.com/"
+      },
+      "primaryImageOfPage": {
+        "@type": "ImageObject",
+        "url": "https://img5.pic.in.th/file/secure-sv1/7befec25ddf201d07.jpg",
+        "width": 1200,
+        "height": 630
+      },
+      "publisher": { "@id": "https://www.baumechemical.com/#org" },
+      "breadcrumb": { "@id": "https://www.baumechemical.com/about-us#breadcrumb" },
+      "inLanguage": "th"
     }
-  }
-  </script>
-
-  <!-- JSON-LD: Organization -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Organization",
-    "name":"Baume Chemical",
-    "url":"https://www.baumechemical.com/",
-    "logo":"https://img2.pic.in.th/pic/Baume.jpg",
-    "sameAs":["https://line.me/ti/p/~baumechemical"]
-  }
-  </script>
-
-  <!-- JSON-LD: BreadcrumbList -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"BreadcrumbList",
-    "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"หน้าแรก","item":"https://www.baumechemical.com/"},
-      {"@type":"ListItem","position":2,"name":"เกี่ยวกับเรา","item":"https://www.baumechemical.com/about-us"}
-    ]
-  }
-  </script>
+  ]
+}
+</script>
 
   <style>
     :root{
