--- a/passivation.html
+++ b/passivation.html
@@ -21,7 +21,7 @@
   <meta property="og:title" content="โครเมตบนซิงค์ (Passivation) - Baume Chemical">
   <meta property="og:description" content="Passivation บนซิงค์เพื่อเพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 และหลายเฉดสีตามสเปก">
   <meta property="og:url" content="https://www.baumechemical.com/passivation">
-  <meta property="og:image" content="https://i.imgur.com/nwKlx5m.jpeg">
+  <meta property="og:image" content="https://img2.pic.in.th/pic/image0-4.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Structured Data (JSON-LD) -->
@@ -111,7 +111,7 @@
     .hero{
       position:relative; overflow:hidden; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(420px, 60vh, 620px);
-      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)), url('https://i.imgur.com/nwKlx5m.jpeg') center/cover no-repeat;
+      background: linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.6)), url('https://img2.pic.in.th/pic/image0-4.jpeg') center/cover no-repeat;
     }
     .hero h1{margin:0 0 10px; font-weight:800; font-size:clamp(26px,4.2vw,44px); text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{max-width:960px; margin:0 auto; color:#e6f2ef}
@@ -249,7 +249,7 @@
 
       <!-- Blue (White) Chromate 6 -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/5y5rxxO.jpeg" alt="Blue (White) Chromate 6"></picture>
+        <picture><img src="https://img2.pic.in.th/pic/image0-4.jpeg" alt="Blue (White) Chromate 6"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_blue_t">Blue (White) Chromate 6</h3>
@@ -262,7 +262,7 @@
 
       <!-- Black Chromate 6 -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/AU3gOuJ.jpeg" alt="Black Chromate 6"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image2a65d41519ed36e3a.jpeg" alt="Black Chromate 6"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_black_t">Black Chromate 6</h3>
@@ -275,7 +275,7 @@
 
       <!-- Yellow Chromate 6 -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/Y3zTYjx.jpeg" alt="Yellow Chromate 6"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg" alt="Yellow Chromate 6"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_yellow_t">Yellow Chromate 6</h3>
@@ -288,7 +288,7 @@
 
       <!-- Olive Drab Chromate 6 -->
       <article class="card lift reveal">
-        <picture><img src="https://i.imgur.com/3dneBY4.jpeg" alt="Olive Drab Chromate 6"></picture>
+        <picture><img src="https://img5.pic.in.th/file/secure-sv1/image1-17c4d344f7013e3fd.jpeg" alt="Olive Drab Chromate 6"></picture>
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_olive_t">Olive Drab Chromate 6</h3>
