--- a/troubleshootinghexavalentchromeblack.html
+++ b/troubleshootinghexavalentchromeblack.html
@@ -14,14 +14,14 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Chromate Black 80 — Hexavalent Black for Zinc (Cr(VI))">
   <meta property="og:description" content="Cr(VI) black chromate for zinc. 80A 60 cc/L + 80B 80 cc/L; pH 1.6–2.6; 40–120 s (≈60 s). DI water only. Topcoat with Metal Guard 510 or 20B.">
-  <meta property="og:image" content="https://i.imgur.com/AU3gOuJ.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image2a65d41519ed36e3a.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/AU3gOuJ.jpeg">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image2a65d41519ed36e3a.jpeg">
 
   <style>
     :root{
@@ -51,7 +51,7 @@
       position:relative; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(380px, 60svh, 640px);
       background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-                 url('https://i.imgur.com/AU3gOuJ.jpeg') center/cover no-repeat;
+                 url('https://img5.pic.in.th/file/secure-sv1/image2a65d41519ed36e3a.jpeg') center/cover no-repeat;
     }
     .hero h1{font-size:clamp(26px,4.2vw,46px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45);margin:0 0 10px}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
