--- a/troubleshootinghexavalentchromeblue.html
+++ b/troubleshootinghexavalentchromeblue.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="product">
   <meta property="og:title" content="Zinc Chromating (Blue, Cr(VI)) — ซิงค์โครเมติ้งสีฟ้าโครม 6">
   <meta property="og:description" content="Low-dosage, easy-maintenance blue Cr(VI) chromate for zinc. Stable pH, good adhesion and corrosion resistance.">
-  <meta property="og:image" content="https://i.imgur.com/5y5rxxO.jpeg">
+  <meta property="og:image" content="https://img2.pic.in.th/pic/image0-4.jpeg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
 
     .hero{display:grid;place-items:center;text-align:center;color:#fff;min-height:clamp(340px,54svh,560px);background:
       linear-gradient(180deg,rgba(0,0,0,.34),rgba(0,0,0,.56)),
-      url('https://i.imgur.com/5y5rxxO.jpeg') center/cover no-repeat}
+      url('https://img2.pic.in.th/pic/image0-4.jpeg') center/cover no-repeat}
     .hero h1{margin:0 0 8px;font-size:clamp(26px,4.2vw,44px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45)}
     .hero p{margin:0 auto;max-width:900px;color:#e6f2ef}
     .badges{display:flex;gap:8px;justify-content:center;margin-bottom:12px;flex-wrap:wrap}
