--- a/yellow-6-passivation-on-zinc.html
+++ b/yellow-6-passivation-on-zinc.html
@@ -12,13 +12,13 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Chromate 5006 • Iridescent Hex-Chrome">
   <meta property="og:description" content="Cr(VI) iridescent chromate on zinc. pH 1.5–2.0; 10–20 s at room temperature; easy tone control.">
-  <meta property="og:image" content="https://i.imgur.com/Y3zTYjx.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/Y3zTYjx.jpeg">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg">
 
   <style>
     :root{
@@ -48,7 +48,7 @@
       position:relative; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(360px, 58svh, 620px);
       background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-                 url('https://i.imgur.com/Y3zTYjx.jpeg') center/cover no-repeat; /* รูป header */
+                 url('https://img5.pic.in.th/file/secure-sv1/image36c92f06ecf965146.jpeg') center/cover no-repeat; /* รูป header */
     }
     .hero h1{font-size:clamp(26px,4.2vw,46px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45);margin:0 0 10px}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
