--- a/olive-6-passivation-on-zinc.html
+++ b/olive-6-passivation-on-zinc.html
@@ -14,14 +14,14 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Hex Green 64 • Olive Drab Chromate">
   <meta property="og:description" content="Deep olive-drab chromate (Cr(VI)) for zinc. pH 1.3–2.0; 30–120 s; rack & barrel; paintable substrate.">
-  <meta property="og:image" content="https://i.imgur.com/3dneBY4.jpeg">
+  <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image1-17c4d344f7013e3fd.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Fonts & Preloads -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="https://i.imgur.com/3dneBY4.jpeg">
+  <link rel="preload" as="image" href="https://img5.pic.in.th/file/secure-sv1/image1-17c4d344f7013e3fd.jpeg">
 
   <style>
     :root{
@@ -51,7 +51,7 @@
       position:relative; display:grid; place-items:center; text-align:center; color:#fff;
       min-height: clamp(360px, 58svh, 620px);
       background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55)),
-                 url('https://i.imgur.com/3dneBY4.jpeg') center/cover no-repeat; /* รูป header */
+                 url('https://img5.pic.in.th/file/secure-sv1/image1-17c4d344f7013e3fd.jpeg') center/cover no-repeat; /* รูป header */
     }
     .hero h1{font-size:clamp(26px,4.2vw,46px);font-weight:800;text-shadow:0 6px 28px rgba(0,0,0,.45);margin:0 0 10px}
     .hero p{max-width:980px;margin:0 auto;color:#e6f2ef}
